[gd_scene load_steps=8 format=3 uid="uid://c0t3dj6fskv0t"]

[ext_resource type="Script" uid="uid://ddqv185m5xy4k" path="res://Scenes/MatchScene/MatchUI/TeamSubstitutionUI.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://duemdswibod36" path="res://Scenes/MatchScene/MatchUI/LiberoOptionsPanel.tscn" id="2_0atft"]
[ext_resource type="PackedScene" uid="uid://c62uwhs35dmk" path="res://Scenes/MatchScene/MatchUI/NameCard.tscn" id="3"]
[ext_resource type="Script" uid="uid://c6dmwcl6p85ru" path="res://Scenes/MatchScene/MatchUI/PlayerStatsViewer.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://ckc4aneaqrwrv" path="res://Textures/AntiClockwiseArrow.png" id="6"]
[ext_resource type="Texture2D" uid="uid://b6iyrxdl4j4cm" path="res://Textures/ClockwiseArrow.png" id="7"]

[sub_resource type="Theme" id="15"]
GridContainer/constants/h_separation = 50
GridContainer/constants/v_separation = 20
VBoxContainer/constants/separation = 20

[node name="TeamSubstitutionUI" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.243137, 0.352941, 0.298039, 1)
script = ExtResource("1")

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(0, 100)
points = PackedVector2Array(1920, 0, 0, 0)
default_color = Color(0.839216, 0.623529, 0.207843, 1)

[node name="HumanTeamBench" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 118.0
offset_top = 121.0
offset_right = 668.0
offset_bottom = 625.0
theme = SubResource("15")
columns = 2

[node name="NameCard1" parent="HumanTeamBench" instance=ExtResource("3")]
layout_mode = 2
size_flags_vertical = 6

[node name="NameCard2" parent="HumanTeamBench" instance=ExtResource("3")]
layout_mode = 2
size_flags_vertical = 6

[node name="NameCard3" parent="HumanTeamBench" instance=ExtResource("3")]
layout_mode = 2
size_flags_vertical = 6

[node name="NameCard4" parent="HumanTeamBench" instance=ExtResource("3")]
layout_mode = 2
size_flags_vertical = 6

[node name="NameCard5" parent="HumanTeamBench" instance=ExtResource("3")]
layout_mode = 2
size_flags_vertical = 6

[node name="NameCard6" parent="HumanTeamBench" instance=ExtResource("3")]
layout_mode = 2
size_flags_vertical = 6

[node name="NameCard7" parent="HumanTeamBench" instance=ExtResource("3")]
layout_mode = 2
size_flags_vertical = 6

[node name="CourtBackground" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 808.0
offset_top = 133.0
offset_right = 1796.0
offset_bottom = 903.0
color = Color(0.839216, 0.623529, 0.207843, 1)

[node name="Libero1NameCard" parent="." instance=ExtResource("3")]
layout_mode = 0
offset_left = 656.129
offset_top = 646.075
offset_right = 906.129
offset_bottom = 746.075

[node name="Libero2NameCard" parent="." instance=ExtResource("3")]
layout_mode = 0
offset_left = 656.129
offset_top = 788.075
offset_right = 906.129
offset_bottom = 888.075

[node name="Line2D2" type="Line2D" parent="."]
position = Vector2(787.567, 382.377)
scale = Vector2(0.326706, 1.39676)
points = PackedVector2Array(3177, -3, -3, -3)
default_color = Color(0.867188, 0.732952, 0.474243, 1)

[node name="Line2D3" type="Line2D" parent="."]
position = Vector2(787.567, 138.695)
scale = Vector2(0.326706, 2.57903)
points = PackedVector2Array(3177, -3, -3, -3)
default_color = Color(0, 0, 0, 1)

[node name="TeamName" type="Label" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 5.0
offset_right = 1919.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 56
text = "Australia"
horizontal_alignment = 1

[node name="AcceptButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1490.36
offset_top = 947.916
offset_right = 1920.36
offset_bottom = 1079.92
text = "Accept"

[node name="CancelSubButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1059.87
offset_top = 948.024
offset_right = 1489.87
offset_bottom = 1080.03
text = "Cancel Sub"

[node name="HumanTeam" type="Control" parent="."]
anchors_preset = 0

[node name="NameCard1" parent="HumanTeam" instance=ExtResource("3")]
layout_mode = 0
offset_left = 1532.31
offset_top = 465.542
offset_right = 1782.31
offset_bottom = 565.542

[node name="NameCard2" parent="HumanTeam" instance=ExtResource("3")]
layout_mode = 0
offset_left = 1531.58
offset_top = 215.755
offset_right = 1781.58
offset_bottom = 315.755

[node name="NameCard3" parent="HumanTeam" instance=ExtResource("3")]
layout_mode = 0
offset_left = 1182.0
offset_top = 216.0
offset_right = 1432.0
offset_bottom = 316.0

[node name="NameCard4" parent="HumanTeam" instance=ExtResource("3")]
layout_mode = 0
offset_left = 832.0
offset_top = 215.0
offset_right = 1082.0
offset_bottom = 315.0

[node name="NameCard5" parent="HumanTeam" instance=ExtResource("3")]
layout_mode = 0
offset_left = 832.0
offset_top = 466.0
offset_right = 1082.0
offset_bottom = 566.0

[node name="NameCard6" parent="HumanTeam" instance=ExtResource("3")]
layout_mode = 0
offset_left = 1183.0
offset_top = 466.0
offset_right = 1433.0
offset_bottom = 566.0

[node name="PlayerStatsViewer" type="Panel" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 867.0
offset_right = 577.0
offset_bottom = 1079.0
script = ExtResource("5")

[node name="Name" type="Label" parent="PlayerStatsViewer"]
layout_mode = 0
offset_top = 10.0
offset_right = 576.0
offset_bottom = 47.0
text = "Karteez Arminhalf"

[node name="Serve" type="Label" parent="PlayerStatsViewer"]
layout_mode = 0
offset_left = 36.0
offset_top = 58.0
offset_right = 290.0
offset_bottom = 95.0
text = "Serve: 99"

[node name="Receive" type="Label" parent="PlayerStatsViewer"]
layout_mode = 0
offset_left = 36.0
offset_top = 90.0
offset_right = 288.0
offset_bottom = 127.0
text = "Receive: 99"

[node name="Set" type="Label" parent="PlayerStatsViewer"]
layout_mode = 0
offset_left = 36.0
offset_top = 123.0
offset_right = 284.0
offset_bottom = 160.0
text = "Set: 99"

[node name="Block" type="Label" parent="PlayerStatsViewer"]
layout_mode = 0
offset_left = 36.0
offset_top = 155.0
offset_right = 287.0
offset_bottom = 192.0
text = "Block: 99"

[node name="Spike" type="Label" parent="PlayerStatsViewer"]
layout_mode = 0
offset_left = 300.0
offset_top = 58.0
offset_right = 577.0
offset_bottom = 95.0
text = "Spike: 99"

[node name="Speed" type="Label" parent="PlayerStatsViewer"]
layout_mode = 0
offset_left = 300.0
offset_top = 90.0
offset_right = 578.0
offset_bottom = 127.0
text = "Speed: 99"

[node name="SpikeHeight" type="Label" parent="PlayerStatsViewer"]
layout_mode = 0
offset_left = 300.0
offset_top = 123.0
offset_right = 576.0
offset_bottom = 160.0
text = "Spike Height: 99"

[node name="BlockHeight" type="Label" parent="PlayerStatsViewer"]
layout_mode = 0
offset_left = 300.0
offset_top = 155.0
offset_right = 576.0
offset_bottom = 192.0
text = "Block Height: 99"

[node name="RotationControl" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ClockwiseButton" type="Button" parent="RotationControl"]
layout_mode = 0
offset_left = 989.731
offset_top = 719.47
offset_right = 1078.73
offset_bottom = 847.47
icon = ExtResource("7")
expand_icon = true

[node name="AntiClockwiseButton" type="Button" parent="RotationControl"]
layout_mode = 0
offset_left = 1425.57
offset_top = 717.02
offset_right = 1516.57
offset_bottom = 849.02
icon = ExtResource("6")
expand_icon = true

[node name="Label" type="Label" parent="RotationControl"]
layout_mode = 0
offset_left = 1100.27
offset_top = 705.615
offset_right = 1401.27
offset_bottom = 838.615
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Rotate"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubsRemainingLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1330.0
offset_top = 866.0
offset_right = 1772.0
offset_bottom = 896.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 21
text = "Substitutions remaining: Unlimited (Pre Set)"

[node name="LiberoOptionsPanel" parent="." instance=ExtResource("2_0atft")]
visible = false

[node name="LiberoOptionsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 732.0
offset_top = 608.0
offset_right = 883.0
offset_bottom = 644.0
theme_override_font_sizes/font_size = 20
text = "Libero Options
"

[connection signal="pressed" from="CancelSubButton" to="." method="_on_CancelSubButton_pressed"]
[connection signal="pressed" from="RotationControl/ClockwiseButton" to="." method="_on_ClockwiseButton_pressed"]
[connection signal="pressed" from="RotationControl/AntiClockwiseButton" to="." method="_on_AntiClockwiseButton_pressed"]
[connection signal="pressed" from="LiberoOptionsButton" to="." method="_on_libero_options_button_pressed"]
